[package]
name = "dotenv"
version = "0.1.0"
edition = "2021"
description = "Manage env files with ease"
authors = ["Federico Vitale <mail@fedevitale.dev>"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
